修正: アプリを多言語化しました
Railsのi18nを利用してアプリを多言語化しました

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,12 @@
-<h1>Editing book</h1>
+<%= link_to "English", "/en#{request.fullpath.delete_prefix("/#{I18n.locale}")}" %> <%= link_to "日本語", "/ja#{request.fullpath.delete_prefix("/#{I18n.locale}")}" %>
+
+<h1><%= t '.Editing_book' %></h1>
 
 <%= render "form", book: @book %>
 
 <br>
 
-<div>
-  <%= link_to "Show this book", @book %> |
-  <%= link_to "Back to books", books_path %>
-</div>
+<nav class="page-nav">
+  <%= link_to "#{t '.Show_this_book'}", @book %>
+  <%= link_to "#{t '.Back_to_books'}", books_path %>
+</nav>
