--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,14 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @book %>
+<%= link_to "English", "/en#{request.fullpath.delete_prefix("/#{I18n.locale}")}" %> <%= link_to "日本語", "/ja#{request.fullpath.delete_prefix("/#{I18n.locale}")}" %>
 
-<div>
-  <%= link_to "Edit this book", edit_book_path(@book) %> |
-  <%= link_to "Back to books", books_path %>
-
-  <%= button_to "Destroy this book", @book, method: :delete %>
+<div class="show-item">
+  <%= render @book %>
 </div>
+
+<nav class="page-nav">
+  <%= link_to "#{t '.Edit_this_book'}", edit_book_path(@book) %> |
+  <%= link_to "#{t '.Back_to_books'}", books_path %>
+
+  <%= button_to "#{t '.Destroy_this_book'}", @book, method: :delete %>
+</nav>
