--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,12 +1,10 @@
-<%= link_to "English", "/en#{request.fullpath.delete_prefix("/#{I18n.locale}")}" %> <%= link_to "日本語", "/ja#{request.fullpath.delete_prefix("/#{I18n.locale}")}" %>
-
-<h1><%= t '.Editing_book' %></h1>
+<h1><%= t 'views.common.title_edit', name: Book.model_name.human %></h1>
 
 <%= render "form", book: @book %>
 
 <br>
 
 <nav class="page-nav">
-  <%= link_to "#{t '.Show_this_book'}", @book %>
-  <%= link_to "#{t '.Back_to_books'}", books_path %>
+  <%= link_to t('views.common.show', name: Book.model_name.human), @book %>
+  <%= link_to t('views.common.back', name: i18n_pluralize(Book.model_name.human)), books_path %>
 </nav>
