--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,20 +1,18 @@
 <p style="color: green"><%= notice %></p>
 
-<%= link_to "English", "/en#{request.fullpath.delete_prefix("/#{I18n.locale}")}" %> <%= link_to "日本語", "/ja#{request.fullpath.delete_prefix("/#{I18n.locale}")}" %>
-
-<h1><%= t '.Books' %></h1>
+<h1><%= t 'views.common.title_index', name: i18n_pluralize(Book.model_name.human) %></h1>
 
 <div id="books" class="index-items">
   <% @books.each do |book| %>
     <div class="index-item">
       <%= render book %>
       <p>
-        <%= link_to "#{t '.Show_this_book'}", book %>
+        <%= link_to t('views.common.show', name: Book.model_name.human), book %>
       </p>
     </div>
   <% end %>
 </div>
 
 <nav class="page-nave">
-  <%= link_to "#{t '.New_book'}", new_book_path %>
+  <%= link_to t('views.common.new', name: Book.model_name.human), new_book_path %>
 </nav>
