--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,12 @@
 <p style="color: green"><%= notice %></p>
 
-<%= link_to "English", "/en#{request.fullpath.delete_prefix("/#{I18n.locale}")}" %> <%= link_to "日本語", "/ja#{request.fullpath.delete_prefix("/#{I18n.locale}")}" %>
-
 <div class="show-item">
   <%= render @book %>
 </div>
 
 <nav class="page-nav">
-  <%= link_to "#{t '.Edit_this_book'}", edit_book_path(@book) %> |
-  <%= link_to "#{t '.Back_to_books'}", books_path %>
+  <%= link_to t('views.common.edit', name: Book.model_name.human), edit_book_path(@book) %> |
+  <%= link_to t('views.common.back', name: i18n_pluralize(Book.model_name.human)), books_path %>
 
-  <%= button_to "#{t '.Destroy_this_book'}", @book, method: :delete %>
+  <%= button_to t('views.common.destroy', name: Book.model_name.human), @book, method: :delete %>
 </nav>
