--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t 'views.common.title_edit', name: Book.model_name.human %></h1>
+<h1><%= t 'views.common.title.edit', name: Book.model_name.human %></h1>
 
 <%= render "form", book: @book %>
 
