--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body class="<%= params[:action] %>">
-    <%= link_to 'English', locale: 'en' %> <%= link_to '日本語', locale: 'ja' %>
+    <%= link_to 'English' %> <%= link_to '日本語' %>
     <%= yield %>
   </body>
 </html>
