修正:cookieにlocaleを保存できるようにしました

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   </head>
 
   <body class="<%= params[:action] %>">
-    <%= link_to 'English' %> <%= link_to '日本語' %>
+    <% I18n.available_locales.each do |locale| %>
+      <%= link_to t("views.common.locale.#{locale}"), locale: locale %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
