--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -11,6 +11,11 @@
   </p>
 
   <p>
+    <strong><%= User.human_attribute_name(:icon) %>:</strong>
+    <%= image_tag user.icon.variant(:thumb) if user.icon.attached? %>
+  </p>
+
+  <p>
     <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
     <%= user.postal_code %>
   </p>
