--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,6 +4,12 @@
   <%= render @book %>
 </div>
 
+<div class="show-item">
+  <%= render 'comments/comment', commentable: @book, comments: @comments %>
+</div>
+
+<%= render 'comments/form', comment: [@book, @book.comments.new] %>
+
 <nav class="page-nav">
   <%= link_to t('views.common.edit', name: Book.model_name.human.downcase), edit_book_path(@book) %> |
   <%= link_to t('views.common.back', name: i18n_pluralize(Book.model_name.human.downcase)), books_path %>
