追加：日本語表示に対応

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -13,7 +13,7 @@
       </ul>
     <% end %>
   <% else %>
-    No Comments
+    <%= t('views.common.none', name: Comment.model_name.human.downcase) %>
   <% end %>
   </table>
 </p>
