--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,16 +1,16 @@
 <div id="<%= dom_id report %>">
   <p>
-    <strong>Date:</strong>
+    <strong><%= Report.human_attribute_name(:date) %>:</strong>
     <%= i18n_localize_time(report.created_at, 'Tokyo') %>
   </p>
 
   <p>
-    <strong>Title:</strong>
+    <strong><%= Report.human_attribute_name(:title) %>:</strong>
     <%= report.title %>
   </p>
 
   <p>
-    <strong>Body:</strong>
+    <strong><%= Report.human_attribute_name(:body) %>:</strong>
     <%= report.body %>
   </p>
 
