修正：指摘箇所を修正

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: comment) do |form| %>
   <div>
-    <h2><%= form.label :comment, style: "display: block" %></h2>
+    <%= form.label :comment, style: "display: block" %>
     <%= form.text_area :body, required: true %>
   </div>
 
