--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,10 +4,10 @@
     <% comments.each do |comment| %>
       <ul>
         <li><%= comment.user.name.present? ? comment.user.name : comment.user.email %>
-        <%= i18n_localize_time(comment.created_at, 'Tokyo') %>
+        <%= l comment.created_at, format: :long %>
         <%= comment.body %>
         <% if current_user.id == comment.user_id %>
-          <%= button_to t('views.common.destroy', name: Comment.model_name.human.downcase), [commentable, comment], method: :delete %>
+          <%= button_to t('views.common.destroy', name: Comment.model_name.human.downcase), [commentable, comment], method: :delete, data: { turbo: false } %>
         <% end %>
         </li>
       </ul>
