--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id report %>">
   <p>
     <strong><%= Report.human_attribute_name(:date) %>:</strong>
-    <%= i18n_localize_time(report.created_at, 'Tokyo') %>
+    <%= l report.created_at, format: :long %>
   </p>
 
   <p>
