修正：指摘箇所の修正
create_new_mentionsがtrue/falseを返すように修正
reports/showの10行目翻訳をviewのパスに対応するように修正

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -7,7 +7,7 @@
 <%= render 'shared/comments', commentable: @report %>
 
 <% if @report.mentioned_reports.exists? %>
-  <p><%= t('views.common.mention_from', name: Report.model_name.human) %></p>
+  <p><%= t('.mention_from') %></p>
   <ul>
     <% @report.mentioned_reports.order(:id).each do |report| %>
       <li><%= link_to report[:title], report %></li>
